# Visual_Question_Answer

./: .dockerfile  .env.example  .gitignore  Dockerfile  Makefile  README.md  autoresearch.jsonl  improve.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: experimentation.ipynb  gemini_vqa_pipeline.ipynb  test_vqa_engine.ipynb
src/: app.py  model.py
src/static/: script.js  style.css
src/templates/: index.html
tests/: test_app.py  test_model.py
