[project]
name = "multimodal-ai"
version = "0.1.0"
description = "Visual Question Answering with Gemini & LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "langchain-google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["notebooks/*.ipynb"]
